// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag Snapshots All 1`] = `
<div
  className="sc-AxiKw kSCNI className"
>
  <div
    className="sc-AxjAm hBateQ"
  >
    <img
      height="100"
      src="http://via.placeholder.com/150x150"
      width="100"
    />
  </div>
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots No props 1`] = `
<div
  className="sc-AxiKw jqePkp"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots bottom 1`] = `
<div
  className="sc-AxiKw cqpOYn"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots className 1`] = `
Array [
  <div
    className="sc-AxiKw jqePkp className"
  >
    <div
      className="sc-AxjAm hBateQ"
    />
    <div
      className="sc-AxirZ gunZf"
    />
  </div>,
  <p>
    Body
  </p>,
]
`;

exports[`Flag Snapshots flush 1`] = `
<div
  className="sc-AxiKw pIBQk"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots img 1`] = `
Array [
  <div
    className="sc-AxiKw jqePkp"
  >
    <div
      className="sc-AxjAm hBateQ"
    >
      <img
        height="100"
        src="http://via.placeholder.com/150x150"
        width="100"
      />
    </div>
    <div
      className="sc-AxirZ gunZf"
    />
  </div>,
  <p>
    Body
  </p>,
]
`;

exports[`Flag Snapshots large 1`] = `
<div
  className="sc-AxiKw bHnqFO"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots large reverse 1`] = `
<div
  className="sc-AxiKw iMqEqQ"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots responsive 1`] = `
<div
  className="sc-AxiKw eDcKhj"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots reverse 1`] = `
<div
  className="sc-AxiKw hIQzje"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots small 1`] = `
<div
  className="sc-AxiKw fkuugJ"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots small reverse 1`] = `
<div
  className="sc-AxiKw dmOrvw"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots tiny 1`] = `
<div
  className="sc-AxiKw gGpGSE"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots tiny reverse 1`] = `
<div
  className="sc-AxiKw irORNo"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots top 1`] = `
<div
  className="sc-AxiKw gmGek"
>
  <div
    className="sc-AxjAm hBateQ"
  />
  <div
    className="sc-AxirZ gunZf"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;
